# computational_physics_labs_2

./: .gitignore
1-SOR_Grid-Refinement/: CMakeLists.txt
1-SOR_Grid-Refinement/include/: solver.hpp
1-SOR_Grid-Refinement/run/: main.py
1-SOR_Grid-Refinement/src/: binder.cpp  solver.cpp
2-FEM-Laplace/: CMakeLists.txt
2-FEM-Laplace/include/: FEM.hpp
2-FEM-Laplace/run/: solver.py
2-FEM-Laplace/src/: FEM.cpp  binder.cpp
3-FEM-TISE/: CMakeLists.txt
3-FEM-TISE/include/: FEM.hpp
3-FEM-TISE/run/: solver.py
3-FEM-TISE/src/: FEM.cpp  binder.cpp
4-IMT-2D-harmonic-oscillator/: CMakeLists.txt
4-IMT-2D-harmonic-oscillator/include/: itm.hpp
4-imt_2dHO/: CMakeLists.txt
4-imt_2dHO/include/: itm.hpp
4-imt_2dHO/run/: solver.py
4-imt_2dHO/src/: itm.cpp
5-FD-TDSE/include/: TdSE.hpp  itm.hpp
5-FD-TDSE/run/: animation.py  find_eigenstates.py  solve.py
5-FD-TDSE/run/states/: eigenstates.npz
5-FD-TDSE/src/: TdSE.cpp
5-TDSE_Finite-Difference/: CMakeLists.txt
5-TDSE_Finite-Difference/src/: TdSE_binder.cpp  itm.cpp  itm_binder.cpp
6-FEM-Forced_oscillations/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md
6-FEM-Forced_oscillations/include/: FEM.hpp
6-FEM-Forced_oscillations/run/: forced_oscillations.py  persistence.py  solver.py  solver2.py
6-FEM-Forced_oscillations/src/: FEM.cpp  binder.cpp
7-FEM-classical-wave-2d/: CMakeLists.txt
7-FEM-classical-wave-2d/include/: solver.hpp
7-FEM-classical-wave-2d/run/: animation.py  run.py
7-FEM-classical-wave-2d/src/: binder.cpp  solver.cpp
8-FEM-forced-oscillations/: CMakeLists.txt
8-FEM-forced-oscillations/include/: FD_solver.hpp
8-FEM-forced-oscillations/run/: run.py
8-FEM-forced-oscillations/src/: FD_solver.cpp  pybind_module.cpp
9-FEM-advection-diffusion/: CMakeLists.txt
9-FEM-advection-diffusion/include/: FEM.hpp
9-FEM-advection-diffusion/run/: run.py
9-FEM-advection-diffusion/src/: FEM.cpp  binder.cpp
